tests/NormalTests/paczka1/small_fuzzy/97284010.err
Error in line 12: A231 A427 15,1
Error in line 11: ynCnq5 A231 148,4
